[tool.poetry]
name = "assister-back-py"
version = "0.1.0"
description = ""
authors = ["KenshoTakizawa <kenshou.golf.1025@gmail.com>"]
readme = "README.md"
packages = [{ include = "assister_back_py" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
